Fixed html issoue in request table

--- a/Resources/views/Collector/elasticsearch.html.twig
+++ b/Resources/views/Collector/elasticsearch.html.twig
@@ -119,7 +119,7 @@
                         <td colspan="10">{{ query.bodyRaw }}</td>
                     </tr>
                     <tr id="es-request-body-nice-{{ key }}" style="display: none;">
-                        <td>Formatted Request Body</td>
+                        <td colspan="2">Formatted Request Body</td>
                         <td colspan="10">{{ dump(query.body) }}</td>
                     </tr>
                 {% endif %}
